---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: ????
  Changes:
    - Updated the mod to the new flib `gui-beta` module
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Date: 2020-12-06
  Changes:
    - Clicking a crafter to give a blueprint of it will use the blueprint clipboard intead of a one-off item
---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: 2020-11-23
  Changes:
    - Updated to Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2020-11-15
  Changes:
    - Updated deprecated require path for flib data-util module
    - Updated German translation (by Moonsilence)
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2020-09-02
  Features:
    - Added setting to disable the "alternate name" in object tooltips
    - Added `usable in` list to the material page, listing the labs that that science pack is usable in
    - Added crafting speed and crafting categories to crafter tooltips
    - Added category, crafting time, ingredients, and products to recipe tooltips
  Changes:
    - Characters are now properly detected and included as crafters, instead of being hard-coded
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2020-08-30
  Features:
    - Added stack size to item tooltips
    - Added `pumped by` to material page, which lists offshore pumps that produce that fluid
    - Added `rocket launch payloads` and `rocket launch products` to material page
    - Added rocket silos as crafters
      - Rocket silo crafters will display their required amount of rocket parts in their label and tooltip