@@ -7,27 +7,6 @@ RecipeBook=Search for information about materials and recipes in a clean, easy-t
 [controls]
 rb-toggle-gui=Toggle Recipe Book
 
-[mod-setting-name]
-rb-open-item-hotkey=Open held item on hotkey [img=info]
-rb-open-fluid-hotkey=Open selected fluid on hotkey [img=info]
-rb-show-hidden-objects=Show hidden objects [img=info]
-rb-show-unresearched-objects=Show unresearched objects [img=info]
-rb-show-glyphs=Show object type glyphs
-rb-show-alternate-name=Show alternate name [img=info]
-rb-show-detailed-recipe-tooltips=Show detailed recipe tooltips [img=info]
-rb-use-fuzzy-search=Use fuzzy search [img=info]
-rb-use-internal-names=Use internal names [img=info]
-
-[mod-setting-description]
-rb-open-item-hotkey=If enabled, using the Recipe Book hotkey while holding an item will open that item's material page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
-rb-open-fluid-hotkey=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page, if it exists.
-rb-show-unresearched-objects=Does not apply to recipe ingredients and products.
-rb-show-hidden-objects=Does not apply to recipe ingredients and products.
-rb-show-alternate-name=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
-rb-show-detailed-recipe-tooltips=If enabled, a recipe's crafting time, ingredients, and products will be shown in its tooltip. Turn this off if searching causes performance problems.
-rb-use-fuzzy-search=More lenient pattern matching for searches.
-rb-use-internal-names=Use internal prototype names for objects and searching. You can still view an object's translation in its tooltip if `show alternate name` is enabled.
-
 [shortcut-name]
 rb-toggle-gui=Recipe Book
 
@@ -91,9 +70,26 @@ rocket-launch-products=Rocket launch products (__1__)
 rocket-parts-required=Rocket parts required:
 search-by=Search by:
 search=Search
+seconds-standalone=seconds
 seconds-tooltip=The amount of time the recipe will take in a crafter with no modules and a crafting speed of exactly 1.0.
 seconds=__1__ seconds
-seconds-standalone=seconds
+setting-open_fluid_hotkey-tooltip=If enabled, using the Recipe Book hotkey while hovering over a pipe, pump, storage tank, or fluid wagon will open that fluid's material page, if it exists.
+setting-open_fluid_hotkey=Open selected fluid on hotkey [img=info]
+setting-open_item_hotkey-tooltip=If enabled, using the Recipe Book hotkey while holding an item will open that item's material page, if it exists.\nYou can also do this by clicking the RB shortcut while holding an item.
+setting-open_item_hotkey=Open held item on hotkey [img=info]
+setting-show_alternate_name-tooltip=The object's alternate (internal) name will be shown in the object's tooltip. If `use internal names` is enabled, this will show the regular (localised) name.
+setting-show_alternate_name=Show alternate name [img=info]
+setting-show_detailed_recipe_tooltips-tooltip=If enabled, a recipe's crafting time, ingredients, and products will be shown in its tooltip. Turn this off if searching causes performance problems.
+setting-show_detailed_recipe_tooltips=Show detailed recipe tooltips [img=info]
+setting-show_glyphs=Show object type glyphs
+setting-show_hidden-tooltip=Does not apply to recipe ingredients and products.
+setting-show_hidden=Show hidden objects [img=info]
+setting-show_unresearched-tooltip=Does not apply to recipe ingredients and products.
+setting-show_unresearched=Show unresearched objects [img=info]
+setting-use_fuzzy_search-tooltip=More lenient pattern matching for searches.
+setting-use_fuzzy_search=Use fuzzy search [img=info]
+setting-use_internal_names-tooltip=Use internal prototype names for objects and searching. You can still view an object's translation in its tooltip if `show alternate name` is enabled.
+setting-use_internal_names=Use internal names [img=info]
 settings=Settings
 shift-click-to-view-fixed-recipe=Shift + click to view fixed recipe.
 stack-size=Stack size:
