@@ -1,65 +1,0 @@
-data:extend{
-  {
-    type = "bool-setting",
-    name = "rb-open-item-hotkey",
-    setting_type = "runtime-per-user",
-    default_value = true,
-    order = "aa"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-open-fluid-hotkey",
-    setting_type = "runtime-per-user",
-    default_value = true,
-    order = "ab"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-show-hidden-objects",
-    setting_type = "runtime-per-user",
-    default_value = false,
-    order = "ba"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-show-unresearched-objects",
-    setting_type = "runtime-per-user",
-    default_value = true,
-    order = "bb"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-show-glyphs",
-    setting_type = "runtime-per-user",
-    default_value = true,
-    order = "bc"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-show-alternate-name",
-    setting_type = "runtime-per-user",
-    default_value = false,
-    order = "bd"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-show-detailed-recipe-tooltips",
-    setting_type = "runtime-per-user",
-    default_value = true,
-    order = "be"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-use-fuzzy-search",
-    setting_type = "runtime-per-user",
-    default_value = false,
-    order = "ca"
-  },
-  {
-    type = "bool-setting",
-    name = "rb-use-internal-names",
-    setting_type = "runtime-per-user",
-    default_value = false,
-    order = "cb"
-  }
-}
